<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logoutMenuItem"
        android:title="LOGGED IN"
        />
</menu>